@@ -65,12 +65,12 @@ void SystemTest::GetSetEnvTest()
    const std::string env_name("VPR_ENV_TEST_PROP");
    const std::string set_value("Set");
    std::string result_value;
-   vpr::ReturnStatus status;
+   bool status;
 
    status = vpr::System::setenv(env_name, set_value);
-   CPPUNIT_ASSERT(status.success() && "setenv failed");
+   CPPUNIT_ASSERT(status && "setenv failed");
    status = vpr::System::getenv(env_name, result_value);
-   CPPUNIT_ASSERT(status.success() && "getenv failed");
+   CPPUNIT_ASSERT(status && "getenv failed");
    CPPUNIT_ASSERT(set_value == result_value);
 }
 
