@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2006-10-01 patrick  Changed vpr::System::getenv() and vpr::System::setenv() to
+                    return bool instead of vpr::ReturnStatus.
+                    NEW VERSION: 1.1.35
 2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::Signal.
                     NEW VERSION: 1.1.34
 2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::RWMutex.
